<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        tools:ignore="ExtraText">

    <Button
            android:id="@+id/mCameraButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonTakePhoto"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#F88379"
            android:textColor="@android:color/white"
            android:fontFamily="sans-serif-medium"
            android:textAllCaps="false"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:elevation="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/mPhotoImageView"
            android:layout_marginStart="28dp" />

    <Button
            android:id="@+id/mGalleryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonSelectPhoto"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#F88379"
            android:textColor="@android:color/white"
            android:fontFamily="sans-serif-medium"
            android:textAllCaps="false"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:elevation="8dp"
            app:layout_constraintBottom_toTopOf="@+id/mPhotoImageView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="28dp" />


    <ImageView
            android:id="@+id/mPhotoImageView"
            android:layout_width="350dp"
            android:layout_height="400dp"
            android:contentDescription="@string/descriptionImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:color/darker_gray"
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/mDetectButton" />


    <Button
            android:id="@+id/mDetectButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/buttonDiagnose"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#9E4244"
            android:textColor="@android:color/white"
            android:fontFamily="sans-serif-medium"
            android:textAllCaps="false"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:elevation="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/mResultTextView"
            />

    <TextView
            android:text="@string/defaultImage"
            android:layout_width="0dp"
            android:layout_height="75dp"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="sans-serif-medium"
            android:layout_marginStart="32dp"
            android:id="@+id/mResultTextView"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:textStyle="bold"
            android:textAlignment="center" />
</androidx.constraintlayout.widget.ConstraintLayout>